--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -12,8 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v1
-    - uses: BSFishy/meson-build@v1.0.3
-      with:
-        action: test
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: python -m pip install meson ninja
+      - name: Configure Project
+        run: meson setup builddir/
+      - name: Run Tests
+        run: meson test -C builddir/ -v
