--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -22,6 +22,8 @@ jobs:
           python-version: '3.x'
       - name: Install dependencies
         run: python -m pip install meson ninja
+      - name: Install project dependencies (fix sandbox violation later instead)
+        run: meson subprojects download
       - name: Configure Project
         run: meson setup builddir/
       - name: Run Tests
