test: more tests, like for lexer

--- a/meson.build
+++ b/meson.build
@@ -29,6 +29,9 @@ lib_args = [
 #    '-DWINE_NO_TRACE_MSGS',
 #    '-DWINE_NO_DEBUG_MSGS',
 #    '-D_DEBUG',
+    # parser debugging (does not work?)
+    #'-DPARSER_DEBUG=1',
+    #'-DYYDEBUG=1',
     '-D__forceinline=__attribute__((always_inline)) inline'
 ]
 
